# OpenAdvisor2

./: .env  .gitignore  AbstractAgent.py  AbstractLlm.py  BugReport.py  CoursesAgent.py  CoursesWithTools.py  CoursesWithTools2.py  DejaVuSans-Bold.pkl  DejaVuSans.pkl  ExtractCourseData.py  Google-Client-Secret.json  MultiAgent.py  MultiAgent2.py  OpenAI_Assistant.py  OpenAI_Assistant2.py  OpenAdvisor2.py  OuiCrawler.py  OuiCrawler2.py  PydanticAgent.py  README.md  RagAgent.py  RagAgents.py  RouterAgent.py  YouTubeTools.py  config.py  crawled_data_All_log.txt  create_chroma_db.py  dash_chat.py  dups.txt  launch.json  packages.txt  pyproject.toml  pyproject.toml.bak  rag.py  requirements.txt  streamlit_chat.py  streamlit_testing.py  streamlit_ui.py  temp1.json  (+1 more)
.devcontainer/: devcontainer.json
FineTuning/: fine_tuning.py
FineTuning/files/: 1.html  1.md  10.html  10.md  11.html  11.md  12.html  12.md  13.html  13.md  14.html  14.md  15.html  15.md  16.html  16.md  17.html  17.md  18.html  18.md  19.html  19.md  2.html  2.md  20.html  20.md  21.html  21.md  22.html  22.md  23.html  23.md  24.html  24.md  25.html  25.md  26.html  26.md  27.html  27.md  (+32 more)
Old Stuff/: CoursesAgent.py  CoursesWithTools.py  MultiAgent.py  OpenAI_Assistant2.py  StudyProgramAgent.py  pyproject.toml
kb/chroma_All/ce09d447-37ca-411b-b502-4d42e3ba201e/: index_metadata.pickle
kb/chroma_Courses/047c35cb-de23-484f-aa35-9bc663bb2e89/: index_metadata.pickle
kb/chroma_Courses/87bcba64-d79a-4a29-8056-758eda68e5bc/: index_metadata.pickle
kb/json_source/: Student1-Formatted.txt  Student1-Raw.txt  Study_Program_json_guide.txt  Study_Program_json_guide.txt.bak  all_courses.json  all_courses_fixed.json  all_courses_test.json  course_dep_test.json.bak  crawled_data_All1_log.txt  crawled_data_All_log.txt  crawled_data_CS.json  crawled_data_CS_log.txt  crawled_data_OUI_log.txt  cs_courses.json  cs_study_programs.json  irregular_pages.txt  youtube_transcripts_CS.json  youtube_transcripts_OUI.json
kb/json_source/study_programs/: AF.json  AT.json  BP.json  G188.json  G189.json  H370.json  M6.json  QC.json  QO.json
title=FineTuning/: fine_tuning.py
