[tool.poetry]
name = "openadvisor2"
version = "0.1.0"
description = "Open Advisor"
authors = ["yuvalsherman65 <yuval.sherman@robust-sw.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langtrace-python-sdk = "^3.3.14"
streamlit = "^1.41.1"
openai = "^1.58.1"
langchain = "^0.3.13"
langchain-openai = "^0.2.13"
python-dotenv = "^1.0.1"
markdown = "^3.7"
langchain-chroma = "^0.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
