[tool.poetry]
name = "openadvisor2-1"
version = "0.1.0"
description = "Academic advisor chatbot"
authors = ["yuvalsher <yuval.sherman@gmail.com>"]
readme = "README.md"
packages = [{include = "openadvisor2"}]

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.41.1"
setuptools = "^75.8.0"
python-dotenv = "^1.0.1"
langchain = "^0.3.17"
bs4 = "^0.0.2"
markdownify = "^0.14.1"
playwright = "^1.49.1"
fpdf = "^1.7.2"
python-bidi = "^0.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
