[tool.poetry]
name = "openadvisor2-1"
version = "0.1.0"
description = "Academic advisor chatbot"
authors = ["yuvalsher <yuval.sherman@gmail.com>"]
readme = "README.md"
packages = [{include = "openadvisor2"}]

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.41.1"
setuptools = "^75.8.0"
python-dotenv = "^1.0.1"
langchain = "^0.3.17"
bs4 = "^0.0.2"
markdownify = "^0.14.1"
playwright = "^1.49.1"
fpdf = "^1.7.2"
python-bidi = "^0.6.3"
weasyprint = "^64.0"
reportlab = "^4.3.0"
pdfkit = "^1.0.0"
borb = "^2.1.25"
markdown = "^3.7"
pytube = "^15.0.0"
yt-dlp = "^2025.1.26"
torch = "^2.6.0"
transformers = "^4.48.3"
tavily-python = "^0.5.1"
google-api-python-client = "^2.160.0"
html2text = "^2024.2.26"
requests = "^2.32.3"
selenium = "^4.28.1"
google-auth = "^2.38.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"
openai = "^1.61.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
