[tool.poetry]
name = "openadvisor2"
version = "0.1.0"
description = "Open Advisor"
authors = ["yuvalsherman65 <yuval.sherman@robust-sw.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
langtrace-python-sdk = "^3.3.14"
streamlit = "^1.41.1"
openai = "^1.58.1"
langchain = "^0.3.13"
langchain-openai = "^0.2.13"
python-dotenv = "^1.0.1"
markdown = "^3.7"
langchain-chroma = "^0.1.4"
pypdf2 = "^3.0.1"
bs4 = "^0.0.2"
markdownify = "^0.14.1"
pytube = "^15.0.0"
yt = "^4.4.0"
youtube-transcript-api = "^0.6.3"
yt-dlp = "^2025.1.15"
supabase = "^2.11.0"
playwright = "^1.49.1"
logfire = "^3.3.0"
pydantic-ai = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
